Fix flickering in Chrome on page transisitions / load #7

--- a/source/stylesheets/partials/_layout.scss
+++ b/source/stylesheets/partials/_layout.scss
@@ -1,6 +1,17 @@
 /* Layout
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
+/*
+Fix for typekit Flash of Unstyled Text (or FOUT)
+http://help.typekit.com/customer/portal/articles/6852-Controlling-the-Flash-of-Unstyled-Text-or-FOUT-using-Font-Events
+*/
+.wf-loading {
+  visibility: hidden;
+}
+.wf-active {
+  visibility: visible;
+}
+
 /* Generic Classes */
 .indent {
   margin: 0px 56px;
